--- a/.gitignore
+++ b/.gitignore
@@ -223,3 +223,5 @@ $RECYCLE.BIN/
 # End of https://www.gitignore.io/api/code,macos,netbeans,phpstorm,symfony,windows
 
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
+
+*.env
