--- a/config/routes/dev/mis_rutas.yaml
+++ b/config/routes/dev/mis_rutas.yaml
@@ -2,8 +2,37 @@ user_edit:
   path: /user/{_id}
   defaults: { _controller: App\Controller\RoutingController::edit }
   requirements:
-    id: '\d+'
+    _id: '\d+'
 
 app_lucky_number:
     path: /lucky/number
     controller: App\Controller\LuckyController::number
+
+user_list:
+  path: /user/list/{_page}
+  defaults: { _controller: App\Controller\RoutingController::list, _page: 1, _title: 'Lista de usuarios' }
+  requirements:
+    id: '\d+'
+
+mobile_homepage:
+  path: /
+  controller: App\Controller\RoutingController::mobileHomepage
+  host: m.trainingit.es
+
+home:
+  path: /
+  controller: Symfony\Bundle\FrameworkBundle\Controller\RedirectController::urlRedirectAction
+  defaults:
+    path: /user/list
+    permanent: true
+
+otra:
+  path: /otra
+  controller: Symfony\Bundle\FrameworkBundle\Controller\RedirectController::redirectAction
+  defaults:
+    route: user_list
+    permanent: true
+
+generate_url:
+  path: /generate_url
+  defaults: { _controller: App\Controller\RoutingController::generarURL }
