--- a/config/services.yaml
+++ b/config/services.yaml
@@ -25,3 +25,9 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    app.twig_runtime:
+      class: App\Twig\AppRuntime
+      public: false
+      tags:
+        - { name: twig.runtime }
