--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "symfony/serializer-pack": "*",
         "symfony/templating": "4.4.*",
         "symfony/translation": "4.4.*",
+        "symfony/twig-bundle": "4.4.*",
         "symfony/twig-pack": "^1.0",
         "symfony/validator": "4.4.*",
         "symfony/var-dumper": "4.4.*",
